Add Intelligent Campaign Management System and AI-powered DM tools
- Implement comprehensive campaign management with story arcs, session memories, and plot threads
- Add AI-powered story arc generator that creates interconnected narratives
- Create automated session recap generator for 'Previously on...' summaries
- Build foreshadowing engine to subtly weave future plot elements
- Add campaign timeline tracking with chronological event management
- Implement NPC relationship tracking system
- Create DM Assistant with AI-powered NPC dialogue, location descriptions, and combat narration
- Add Encounter Builder with dynamic encounter generation and tactical suggestions
- Implement custom race and class generators with AI validation
- Add comprehensive frontend components for all new features
- Integrate all systems with existing game session infrastructure

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -23,6 +23,7 @@
                 <button data-view="game">Game Session</button>
                 <button data-view="combat">Combat</button>
                 <button data-view="dice">Dice Roller</button>
+                <button data-view="encounter-builder" class="dm-only" style="display: none;">Encounter Builder</button>
             </nav>
         </header>
         
